--- a/index.css
+++ b/index.css
@@ -95,7 +95,6 @@ html {
     .intro-container {
         flex-direction: column-reverse;
         align-items: center;
-        gap: 0;
     }
 
     .intro-list {
@@ -119,6 +118,14 @@ html {
         gap: 15px;
         font-size: medium;
     }
+
+    .intro-text h2 {
+        font-size: 2em;
+    }
+
+    .intro-paragraph {
+        margin-top: 2.5rem;
+    }
 }
 
 .button {
@@ -132,6 +139,16 @@ html {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+    display: inline-block;
+    margin-top: 20px;
+    width: fit-content;
+}
+
+@media (max-width: 767px) or (orientation: portrait) {
+    .button {
+        font-size: xx-large;
+        padding: 1rem 2rem;
+    }
 }
 
 /*** Start Cards ***/
@@ -190,9 +207,19 @@ html {
 .title {
     font-size: 1.5em;
     /* adjust the size as needed */
-    margin: 20px auto;
+    margin: 1.5rem auto;
     /* adjust the spacing as needed */
     color: #1F486D;
+}
+
+@media (max-width: 767px) or (orientation: portrait) {
+    .title {
+        font-size: 2em;
+        margin: 2.5rem auto;
+    }
+
+
+
 }
 
 .steps-container {
@@ -203,6 +230,12 @@ html {
     /* adjust the width as needed */
     color: #136E73;
     gap: 2.5rem;
+}
+
+@media (max-width: 767px) or (orientation: portrait) {
+    .steps-container {
+        margin: 5rem auto;
+    }
 }
 
 .step {
@@ -238,7 +271,7 @@ html {
 /*** Start Product ***/
 
 .product-info {
-    text-align: center;
+    text-align: left;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -246,7 +279,7 @@ html {
 
 .features {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     padding: 20px 0;
 }
 
@@ -254,32 +287,45 @@ html {
     margin: 0 20px;
 }
 
-.button {
-    display: inline-block;
-    margin-top: 20px;
-    width: fit-content;
-}
-
-@media (min-width: 768px) or (orientation: portrait) {
-    .product-info {
-        text-align: left;
-    }
-
-    .features {
-        justify-content: start;
-    }
-}
 
 @media (max-width: 768px) or (orientation: portrait) {
+
+    .product-section-title {
+        padding-top: 2rem;
+        font-size: 2.7rem;
+    }
+
     .product-section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0 3rem;
+        padding: 2rem 3rem;
+        gap: 1.5rem;
+    }
+
+    .product-info {
+        text-align: center;
+        width: max-content;
+    }
+
+    .product-info h2 {
+        font-size: 2.5rem;
+    }
+
+    .features {
+        justify-content: center;
+        font-size: 1.5rem;
+        width: max-content;
+        text-align: left;
     }
 
     .brand-section {
         flex-direction: column;
+        gap: 1rem;
+    }
+
+    .brand-logo {
+        width: 70%;
     }
 
     .card {
@@ -301,12 +347,7 @@ html {
     padding: 2rem 0;
 }
 
-.product-image-container img {
-    width: 40%;
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    margin-bottom: 20px;
-}
+
 
 .product-text {
     display: flex;
@@ -317,14 +358,20 @@ html {
     text-align: center;
 }
 
-.new-image-container img {
-    width: 60%;
+.product-text h2 {
+    font-size: 2.5rem;
+    margin: 20px 0;
+}
+
+.product-image-container img {
+    width: 40%;
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 0;
     /* Removed rounded border */
-    margin-bottom: 20px;
+    margin: 1rem 0;
 }
+
 
 .journey-button {
     display: inline-block;
@@ -333,12 +380,31 @@ html {
     padding: 10px 25px;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
-    margin-top: 20px;
+    font-size: 1.4rem;
+    margin-top: 2rem;
     /* New margin to place the button below the text */
     cursor: pointer;
 }
 
+@media (max-width: 768px) or (orientation: portrait) {
+    .product-text {
+        padding: 0 10%;
+    }
+
+    .product-text h2 {
+        font-size: 4rem;
+    }
+
+    .product-image-container img {
+        width: 70%;
+        margin: 2.5rem 0;
+    }
+
+    .journey-button {
+        font-size: 1rem;
+        margin-bottom: 2rem;
+    }
+}
 
 /*** Start Contact ***/
 
